--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -393,12 +393,7 @@
                 <option value="">-- 증권 선택 --</option>
               </select>
             </div>
-            <div class="col-md-2">
-              <button type="button" class="btn btn-primary btn-sm w-100" id="btnDailyEndorseSearch">
-                <i class="fas fa-search me-1"></i>조회
-              </button>
-            </div>
-            <div class="col-md-3 d-flex align-items-center justify-content-end gap-2">
+            <div class="col-md-5 d-flex align-items-center justify-content-end gap-2">
               <div id="daily_currentSituation" class="text-info fw-bold"></div>
               <button type="button" class="btn btn-sm btn-secondary" id="btnDailyEndorseCheck" disabled>
                 <i class="fas fa-check me-1"></i>검토
@@ -420,8 +415,8 @@
                   <th>회사명</th>
                   <th>회사전화</th>
                   <th>요율</th>
-                  <th>보험료</th>
-                  <th>C보험료</th>
+                  <th style="width: 8%;">보험료</th>
+                  <th style="width: 8%;">C보험료</th>
                   <th>처리자</th>
                   <th>처리일시</th>
                 </tr>
@@ -467,7 +462,7 @@
   <style>
     /* 일일배서리스트 보험료 입력 필드 스타일 */
     .premium-input {
-      width: 60% !important;
+      width: 40% !important;
       border: none !important;
       background-color: white !important;
       padding: 0.25rem 0.5rem !important;
