--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -496,8 +496,41 @@
     }
     /* 페이지네이션과 테이블 사이 간격 - 인라인 스타일로 적용하므로 CSS는 백업용 */
     #dailyEndorseListModal #sms-pagination {
-      margin-top: 3.33rem !important; /* 약 53px */
+      margin-top: 1rem !important; /* 약 16px */
       margin-bottom: 1rem !important; /* 16px */
+    }
+
+    /* 두 모달 나란히 표시 스타일 */
+    .modal-side-by-side {
+      position: fixed !important;
+      z-index: 1055 !important;
+    }
+
+    /* 일일배서리스트 모달을 오른쪽으로 이동 */
+    #dailyEndorseListModal.modal-side-by-side .modal-dialog {
+      position: fixed !important;
+      right: 0.5rem !important;
+      left: auto !important;
+      margin: 1.75rem auto !important;
+      transform: translateX(0) !important;
+      width: calc(66.67% - 1rem) !important; /* 화면의 약 2/3 */
+      max-width: none !important;
+    }
+
+    /* 배서현황 모달을 왼쪽에 표시하고 폭을 현재보다 1/3 작게 (원래 modal-xl 폭의 2/3 = 약 760px) */
+    #endorseStatusModal.modal-side-by-side .modal-dialog {
+      position: fixed !important;
+      left: 0.5rem !important;
+      right: auto !important;
+      margin: 1.75rem auto !important;
+      transform: translateX(0) !important;
+      width: 760px !important; /* modal-xl(1140px)의 2/3 크기 */
+      max-width: calc(33.33vw - 1rem) !important; /* 화면이 작을 경우 화면 너비의 1/3 */
+    }
+
+    /* 모달 배경 오버레이 스타일 */
+    .modal-backdrop.show {
+      z-index: 1054 !important;
     }
   </style>
 
