--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -543,6 +543,44 @@
     .modal-side-by-side.modal.show {
       padding-right: 0 !important;
     }
+
+    /* 배서현황 보고서 스타일 */
+    .report-container {
+      padding: 1rem;
+    }
+
+    .report-section {
+      margin-bottom: 1.5rem;
+      padding: 1rem;
+      border: 1px solid #dee2e6;
+      border-radius: 0.375rem;
+      background-color: #ffffff;
+    }
+
+    .report-section h3 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 1.5rem;
+      color: #212529;
+    }
+
+    .report-section h4 {
+      font-size: 1.1rem;
+      font-weight: bold;
+      margin-bottom: 0.75rem;
+      color: #495057;
+    }
+
+    .report-section ul {
+      list-style-type: disc;
+      padding-left: 1.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .report-section p {
+      margin: 0.5rem 0;
+      font-size: 0.95rem;
+    }
     
     /* Bootstrap 모달이 다른 모달을 닫지 않도록 */
     body.modal-open {
