--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -459,16 +459,72 @@
   <div class="modal fade" id="smsListModal" tabindex="-1" aria-labelledby="smsListModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl modal-dialog-scrollable">
       <div class="modal-content">
-        <div class="modal-header">
+        <div class="modal-header" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white;">
           <h5 class="modal-title" id="smsListModalLabel">
             <i class="fas fa-sms me-2"></i>문자리스트
           </h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="닫기"></button>
         </div>
         <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
-          <div class="alert alert-info">
-            <i class="fas fa-info-circle me-2"></i>문자리스트 기능은 준비 중입니다.
+          <!-- 필터 영역 -->
+          <div class="row mb-3 align-items-end">
+            <div class="col-md-2">
+              <label class="form-label small">검색 방식</label>
+              <select id="smsSort" class="form-control form-control-sm">
+                <option value="2">날짜 범위</option>
+                <option value="1">전화번호</option>
+                <option value="3">대리운전회사</option>
+              </select>
+            </div>
+            <div class="col-md-2" id="smsPhoneFilter" style="display: none;">
+              <label class="form-label small">전화번호</label>
+              <input type="text" id="smsPhone" class="form-control form-control-sm" placeholder="010-1234-5678">
+            </div>
+            <div class="col-md-2" id="smsDateStartFilter">
+              <label class="form-label small">시작일</label>
+              <input type="date" id="smsStartDate" class="form-control form-control-sm">
+            </div>
+            <div class="col-md-2" id="smsDateEndFilter">
+              <label class="form-label small">종료일</label>
+              <input type="date" id="smsEndDate" class="form-control form-control-sm">
+            </div>
+            <div class="col-md-3" id="smsCompanyFilter" style="display: none;">
+              <label class="form-label small">대리운전회사</label>
+              <input type="text" id="smsCompany" class="form-control form-control-sm" placeholder="회사명 입력">
+            </div>
+            <div class="col-md-2">
+              <button type="button" class="btn btn-sm btn-primary w-100" id="btnSmsSearch">
+                <i class="fas fa-search me-1"></i>조회
+              </button>
+            </div>
+            <div class="col-md-1">
+              <div class="text-muted small text-end">
+                총 <span id="smsTotalCount">0</span>건
+              </div>
+            </div>
           </div>
+          
+          <!-- 테이블 -->
+          <div class="table-responsive">
+            <table class="table table-sm table-hover">
+              <thead class="table-light">
+                <tr>
+                  <th style="width: 8%;">순번</th>
+                  <th style="width: 15%;">수신번호</th>
+                  <th style="width: 50%;">메시지</th>
+                  <th style="width: 27%;">발송시간</th>
+                </tr>
+              </thead>
+              <tbody id="smsListTableBody">
+                <tr>
+                  <td colspan="4" class="text-center py-4 text-muted">검색 조건을 선택하고 조회 버튼을 클릭하세요.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          
+          <!-- 페이지네이션 -->
+          <div id="smsPagination" class="mt-3 d-flex justify-content-center"></div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
