--- a/public/pages/insurance/kj-driver-endorse-list.html
+++ b/public/pages/insurance/kj-driver-endorse-list.html
@@ -469,28 +469,23 @@
           <!-- 필터 영역 -->
           <div class="row mb-3 align-items-end">
             <div class="col-md-2">
-              <label class="form-label small">검색 방식</label>
-              <select id="smsSort" class="form-control form-control-sm">
+              <select id="smsSort" class="form-control form-control-sm" title="검색 방식">
                 <option value="2">날짜 범위</option>
                 <option value="1">전화번호</option>
                 <option value="3">대리운전회사</option>
               </select>
             </div>
             <div class="col-md-2" id="smsPhoneFilter" style="display: none;">
-              <label class="form-label small">전화번호</label>
-              <input type="text" id="smsPhone" class="form-control form-control-sm" placeholder="010-1234-5678">
+              <input type="text" id="smsPhone" class="form-control form-control-sm" placeholder="010-1234-5678" title="전화번호">
             </div>
             <div class="col-md-2" id="smsDateStartFilter">
-              <label class="form-label small">시작일</label>
-              <input type="date" id="smsStartDate" class="form-control form-control-sm">
+              <input type="date" id="smsStartDate" class="form-control form-control-sm" title="시작일">
             </div>
             <div class="col-md-2" id="smsDateEndFilter">
-              <label class="form-label small">종료일</label>
-              <input type="date" id="smsEndDate" class="form-control form-control-sm">
+              <input type="date" id="smsEndDate" class="form-control form-control-sm" title="종료일">
             </div>
             <div class="col-md-3" id="smsCompanyFilter" style="display: none;">
-              <label class="form-label small">대리운전회사</label>
-              <input type="text" id="smsCompany" class="form-control form-control-sm" placeholder="회사명 입력">
+              <input type="text" id="smsCompany" class="form-control form-control-sm" placeholder="회사명 입력" title="대리운전회사">
             </div>
             <div class="col-md-2">
               <button type="button" class="btn btn-sm btn-primary w-100" id="btnSmsSearch">
@@ -525,9 +520,6 @@
           
           <!-- 페이지네이션 -->
           <div id="smsPagination" class="mt-3 d-flex justify-content-center"></div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
         </div>
       </div>
     </div>
