--- a/public/pages/insurance/kj-driver-company.html
+++ b/public/pages/insurance/kj-driver-company.html
@@ -187,6 +187,51 @@
     </div>
   </div>
 
+  <!-- 업체 I.D 모달 -->
+  <div class="modal fade" id="kj-id-modal" tabindex="-1" aria-labelledby="kjIdModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="kjIdModalLabel">업체 I.D 관리</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="닫기"></button>
+        </div>
+        <div class="modal-body" style="max-height: 80vh; overflow-y: auto;">
+          <div class="mb-3">
+            <h6 id="id_daeriCompany"></h6>
+          </div>
+          <div class="table-responsive">
+            <table class="table table-bordered table-sm">
+              <thead class="table-light">
+                <tr>
+                  <th style="width: 15%;">담당자성명</th>
+                  <th style="width: 15%;">업체 I.D</th>
+                  <th style="width: 15%;">핸드폰번호</th>
+                  <th style="width: 15%;">권한</th>
+                  <th style="width: 20%;">비밀번호</th>
+                  <th style="width: 20%;">허용/차단</th>
+                </tr>
+              </thead>
+              <tbody id="id_list">
+                <tr>
+                  <td colspan="6" class="text-center py-4">데이터를 불러오는 중...</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="mt-2">
+            <small class="text-muted" id="idExplain"></small>
+          </div>
+          <div class="mt-1">
+            <small class="text-muted" id="idExplain2"></small>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SJ 템플릿 로더 -->
