--- a/public/pages/pharmacy/applications.html
+++ b/public/pages/pharmacy/applications.html
@@ -143,6 +143,7 @@
                       <th class="col-phone d-none d-xl-table-cell">연락처</th>
                       <th class="col-design-number d-none d-lg-table-cell">전문설계번호</th>
                       <th class="col-design-number d-none d-lg-table-cell">화재설계번호</th>
+                      <th class="col-date d-none d-xl-table-cell">가입요청일</th>
                       <th class="col-date">승인일</th>
                       <th class="col-status">상태</th>
                       <th class="col-memo d-none d-xl-table-cell">메모</th>
@@ -152,7 +153,7 @@
                   </thead>
                   <tbody id="pharmacy_table_body">
                     <tr>
-                      <td colspan="13" class="text-center py-4">데이터를 불러오는 중...</td>
+                      <td colspan="14" class="text-center py-4">데이터를 불러오는 중...</td>
                     </tr>
                   </tbody>
                 </table>
